fdo#80522 & fdo#80523:Embedded Macro-Enabled objects are not preserved

Description :
fdo#80522
- DOCX contain embedded word Macro-Enabled document.
- Embedded word Macro-Enabled object is not preserved.
- .docm preserved as .bin so word Macro-Enabled document is converted to picture.

fdo#80523
1) Embedded PowerPoint Macro-Enabled Slide
   - DOCX contain embedded PowerPoint Macro-Enabled Slide
   - Embedded PowerPoint Macro-Enabled Slide is not preserved.
   - .sldm preserved as .bin so powerpoint Macro-Enabled slide is converted to picture.
2) Embedded PowerPoint Macro-Enabled Presentation
   - same case with embedded PowerPoint Macro-Enabled Presentation
   - Embedded PowerPoint Macro-Enabled presentation is not preserved.
   - .pptm preserved as .pptx so powerpoint Macro-Enabled presentation is converted to picture .

Implementation :
Added sMediaType, sRelationType & sFileExtension for these embedded objects.

Change-Id: Ia58662ba921f3d940e8ead04a7f7ae83689a3b35